--- a/portoflio_source_code/SCSS/_layout.scss
+++ b/portoflio_source_code/SCSS/_layout.scss
@@ -29,6 +29,7 @@ hr {
   background-color: #707070;
   .modal-wrapper {
     padding: 10% 15% 10% 0;
+    opacity: 1 !important;
     li {
       margin-bottom: 20px;
     }
